# 2023_ac_example_graphdb_application

./: README.md  pyproject.toml
src/: main.py
src/graphs/: basic_models.py  daos.py  id_generator.py  models.py  router.py
tests/: .gitignore  conftest.py  docker-compose.yml  test_router.py
tests/graphs/: test_basic_models.py  test_daos.py
